--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@ textarea{
 .jumbotron {
   text-align: center;
   background-color: transparent;
-  color: black;
+  color: rgb(0, 0, 0);
   border-radius: 0;
   border-bottom: 10px solid black;
 }
@@ -25,9 +25,9 @@ textarea{
   white-space: pre-wrap;
 }
 
-.time-block{
-  text-align: center;
-  border-radius: 15px;
+.container {
+  display: flex;
+  justify-content: space-between;
 }
 
 .row {
@@ -57,7 +57,27 @@ textarea{
   color: white;
 }
 
+.timeBlock{
+  display: flex;
+  text-align: center;
+  padding: 20px;
+  margin: auto;
+  border-style: dotted;
+  width: 100px;
+}
+
+.description {
+  display: flex;
+  width: 600px;
+  border-color: #000000;
+  background-color: lightslategray;
+}
+
 .saveBtn {
+  display: flex;
+  width: 100px;
+  padding: 20px;
+  margin: auto;
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
